// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdvvtL sc-gsDKAQ fsnfKq djDaHe"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdvvtL sc-gsDKAQ kirGiV djDaHe"
>
  foo
</button>
`;
